; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_vf_colorspace.c_get_color_primaries.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_vf_colorspace.c_get_color_primaries.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ColorPrimaries = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@AVCOL_PRI_NB = common dso_local global i32 0, align 4
@color_primaries = common dso_local global %struct.ColorPrimaries* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.ColorPrimaries* (i32)* @get_color_primaries to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.ColorPrimaries* @get_color_primaries(i32 %0) #0 {
  %2 = alloca %struct.ColorPrimaries*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.ColorPrimaries*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* @AVCOL_PRI_NB, align 4
  %7 = icmp uge i32 %5, %6
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store %struct.ColorPrimaries* null, %struct.ColorPrimaries** %2, align 8
  br label %22

9:                                                ; preds = %1
  %10 = load %struct.ColorPrimaries*, %struct.ColorPrimaries** @color_primaries, align 8
  %11 = load i32, i32* %3, align 4
  %12 = zext i32 %11 to i64
  %13 = getelementptr inbounds %struct.ColorPrimaries, %struct.ColorPrimaries* %10, i64 %12
  store %struct.ColorPrimaries* %13, %struct.ColorPrimaries** %4, align 8
  %14 = load %struct.ColorPrimaries*, %struct.ColorPrimaries** %4, align 8
  %15 = getelementptr inbounds %struct.ColorPrimaries, %struct.ColorPrimaries* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %20, label %19

19:                                               ; preds = %9
  store %struct.ColorPrimaries* null, %struct.ColorPrimaries** %2, align 8
  br label %22

20:                                               ; preds = %9
  %21 = load %struct.ColorPrimaries*, %struct.ColorPrimaries** %4, align 8
  store %struct.ColorPrimaries* %21, %struct.ColorPrimaries** %2, align 8
  br label %22

22:                                               ; preds = %20, %19, %8
  %23 = load %struct.ColorPrimaries*, %struct.ColorPrimaries** %2, align 8
  ret %struct.ColorPrimaries* %23
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
